--- a/12-knitr-misc.Rmd
+++ b/12-knitr-misc.Rmd
@@ -390,9 +390,9 @@ plot(cars)
 ```
 ````
 
-The biggest disadvantage of **knitr**'s caching (and also what users complain most frequently about) is that your cache might be inadvertently invalidated, because the cache is determined by too many factors. For example, any changes in chunk options can invalidate the cache,[^1] but some chunk options may not be relevant to the computing. In the code chunk below, changing the chunk option `fig.width = 6` to `fig.width = 10` should not invalidate the cache, but it will:
+The biggest disadvantage of **knitr**'s caching (and also what users complain most frequently about) is that your cache might be inadvertently invalidated, because the cache is determined by too many factors. For example, any changes in chunk options can invalidate the cache,[^knitr-misc-1] but some chunk options may not be relevant to the computing. In the code chunk below, changing the chunk option `fig.width = 6` to `fig.width = 10` should not invalidate the cache, but it will:
 
-[^1]: This is the default behavior, and you can change it. See <https://yihui.org/knitr/demo/cache/> for how you can make the cache more granular, so not all chunk options affect the cache.
+[^knitr-misc-1]: This is the default behavior, and you can change it. See <https://yihui.org/knitr/demo/cache/> for how you can make the cache more granular, so not all chunk options affect the cache.
 
 ```` {.md}
 ```{r, cache=TRUE, fig.width=6}`r ''`
