--- a/05-latex.Rmd
+++ b/05-latex.Rmd
@@ -54,9 +54,9 @@ fontsize: 12pt
 links-as-notes: true
 ```
 
-The meanings of these options should be clear if you have some knowledge about LaTeX. The `documentclass` option sets the document class, e.g., `article`, `book`, and `report`, etc. The `classoption` is a list of options to be passed to the document class, e.g., you can create a two-column document with the `twocolumn` option,[^1] or the landscape layout with the `landscape` option (the default is the portrait layout). The `papersize` option sets the paper size, e.g., `a4`, `paper`, or `a5`. The `linestretch` option sets the line spacing. The `fontsize` option sets the font size, e.g., `10pt`, `11pt`, or `12pt`. The `links-as-notes` option turns links on text to footnotes, which is useful when the PDF is printed on paper, because readers will not be able to click the links on paper but can see the URLs in footnotes.
+The meanings of these options should be clear if you have some knowledge about LaTeX. The `documentclass` option sets the document class, e.g., `article`, `book`, and `report`, etc. The `classoption` is a list of options to be passed to the document class, e.g., you can create a two-column document with the `twocolumn` option,[^latex-1] or the landscape layout with the `landscape` option (the default is the portrait layout). The `papersize` option sets the paper size, e.g., `a4`, `paper`, or `a5`. The `linestretch` option sets the line spacing. The `fontsize` option sets the font size, e.g., `10pt`, `11pt`, or `12pt`. The `links-as-notes` option turns links on text to footnotes, which is useful when the PDF is printed on paper, because readers will not be able to click the links on paper but can see the URLs in footnotes.
 
-[^1]: This option changes the layout of the whole document, but if you want to switch back to the one-column mode from a certain point, you may insert a command `\onecolumn` at that point. If you want to continue the two-column mode, insert `\twocolumn`.
+[^latex-1]: This option changes the layout of the whole document, but if you want to switch back to the one-column mode from a certain point, you may insert a command `\onecolumn` at that point. If you want to continue the two-column mode, insert `\twocolumn`.
 
 Changing fonts can be a little trickier. It depends on which LaTeX engine you are using. If you are using `pdflatex`, which is usually the default engine for most LaTeX-based output formats, you may use the `fontfamily` option to select a LaTeX font package to be loaded in your document to change the font, e.g.,
 
@@ -234,9 +234,9 @@ We can use the chunk option `fig.pos` to control the float behavior, and the use
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 ```
 
-In general, we do not recommend that users force LaTeX to stop floating figures. This solution was included in this book by popular demand,[^2] but there could be some serious side-effects when LaTeX is unable to float figures.
+In general, we do not recommend that users force LaTeX to stop floating figures. This solution was included in this book by popular demand,[^latex-2] but there could be some serious side-effects when LaTeX is unable to float figures.
 
-[^2]: The related Stack Overflow question has been viewed for over 45,000 times: <https://stackoverflow.com/q/16626462/559676>.
+[^latex-2]: The related Stack Overflow question has been viewed for over 45,000 times: <https://stackoverflow.com/q/16626462/559676>.
 
 ### Force floats forwards
 
